--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talkkee chat app</title>
+    <title>Live chat app</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <section class="chat_section">
         <div class="brand">
-            <img height=40 src="/chatIcon.png" alt="">
-            <h1> Welcome talkkee</h1>
+            <img height=40 src="/baate_kare.png" alt="">
+            <h1>Baate Kare</h1>
         </div>
         <div class="message_area">
         </div>
